[gd_scene load_steps=2 format=3 uid="uid://83ll5blrubm2"]

[ext_resource type="Script" uid="uid://5u1jecovfk3r" path="res://Scripts/MultiplayerLobby.gd" id="1_qcj1n"]

[node name="MultiplayerLobby" type="Node2D"]
script = ExtResource("1_qcj1n")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="LobbyUI" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = -216.0
offset_top = -140.0
offset_right = -118.0
offset_bottom = -109.0
text = "Host Server"

[node name="CloseServerButton" type="Button" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = -106.0
offset_top = -140.0
offset_right = -2.0
offset_bottom = -109.0
disabled = true
text = "Close Server"

[node name="StartGameButton" type="Button" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = 10.0
offset_top = -140.0
offset_right = 114.0
offset_bottom = -109.0
disabled = true
text = "Start Game"

[node name="MainMenuButton" type="Button" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = -216.0
offset_top = 109.0
offset_right = -118.0
offset_bottom = 140.0
text = "Main Menu"

[node name="ConnectButton" type="Button" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = -106.0
offset_top = -98.0
offset_right = -8.0
offset_bottom = -67.0
text = "Connect"

[node name="DisconnectButton" type="Button" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = 10.0
offset_top = -98.0
offset_right = 108.0
offset_bottom = -67.0
disabled = true
text = "Disconnect"

[node name="MainMenuButton2" type="Button" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = 156.0
offset_top = 109.0
offset_right = 216.0
offset_bottom = 140.0
text = "Send"

[node name="PlayersVBox" type="VBoxContainer" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = -216.0
offset_top = -53.0
offset_right = -119.0
offset_bottom = 93.0

[node name="PlayersLabel" type="Label" parent="Camera2D/LobbyUI/PlayersVBox"]
layout_mode = 2
text = "Players:"

[node name="MessagesVBox" type="VBoxContainer" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = -106.0
offset_top = -57.0
offset_right = 216.0
offset_bottom = 103.0

[node name="MessageLineEdit" type="LineEdit" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = -106.0
offset_top = 109.0
offset_right = 144.0
offset_bottom = 140.0

[node name="UsernameLineEdit" type="LineEdit" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = 123.0
offset_top = -140.0
offset_right = 228.0
offset_bottom = -109.0
placeholder_text = "Username"

[node name="IPAddressLineEdit" type="LineEdit" parent="Camera2D/LobbyUI"]
layout_mode = 0
offset_left = -216.0
offset_top = -98.0
offset_right = -118.0
offset_bottom = -67.0
placeholder_text = "IP Address"

[connection signal="pressed" from="Camera2D/LobbyUI/HostButton" to="." method="onHostPressed"]
[connection signal="pressed" from="Camera2D/LobbyUI/CloseServerButton" to="." method="onCloseServerPressed"]
[connection signal="pressed" from="Camera2D/LobbyUI/StartGameButton" to="." method="onStartGamePressed"]
[connection signal="pressed" from="Camera2D/LobbyUI/MainMenuButton" to="." method="onMainMenuPressed"]
[connection signal="pressed" from="Camera2D/LobbyUI/ConnectButton" to="." method="onConnectPressed"]
[connection signal="pressed" from="Camera2D/LobbyUI/DisconnectButton" to="." method="onDisconnectPressed"]
[connection signal="pressed" from="Camera2D/LobbyUI/MainMenuButton2" to="." method="onSendMessagePressed"]
[connection signal="text_submitted" from="Camera2D/LobbyUI/MessageLineEdit" to="." method="onSendMessagePressed"]
[connection signal="text_changed" from="Camera2D/LobbyUI/UsernameLineEdit" to="." method="onUsernameChange"]
